# learn-grow

./: README.md
01 - Cloud Computing/: 01-Cloud-Computing-Basics.md  02-AWS-Services.md  README.md
02 - AWS Services/: 02-containerization.md  03-amazon-q-app2container-cast.md  04-dotnet-aspnet-vbnet.md  06-counter-questions.md  08-javascript-react.md
02 - Interview Prep/: 00-interview-prep-overview.md  01-aws-cloud-architecture.md  05-behavioral-leadership.md  07-dotnet-core-framework-csharp.md  09-how-to-crack-coding-interview.md  README.md
03 - DotNet/: 01-dotnet-framework-48-mock-interview.md  02-dotnet-core-8-mock-interview.md  README.md
04 - System Design/: 10KeyPillars_of_system_design.jfif  README.md  system-design-quick-guide.md
05 - Gen AI Masterclass/: 01-what-is-an-ai-agent.md  02-llms-vs-ai-agents.md  03-core-capabilities-of-ai-agents.md  04-what-is-an-ai-model.md  05-model-selection-tools.md  README.md
06 - Roadmap to AI Engineer/: 00-main-plan.md  README.md  langchain-core-model.md  llm-fundamentals.md  sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md  sprint-07.md  token-economics-deep-dive.md
06 - Roadmap to AI Engineer/ai-engineer-sprints/: .gitignore  pyproject.toml
06 - Roadmap to AI Engineer/ai-engineer-sprints/helpers/: __init__.py  llm.py
06 - Roadmap to AI Engineer/ai-engineer-sprints/sprint-01/: chat_msg_roles.py  cost_optimization.py  count_tokens.py  hello_llm.py  invoke_vs_stream.py  penalty.py  temprature_handson.py  top_p_vs_temp.py
07 - DSA/: README.md  Top-150.md
(+128 files in other folders)
